lab4/src/main/antlr4/GrammarParser.java
// Generated from Grammar.g4 by ANTLR 4.9.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GrammarParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		WS=1, ENDL=2, COLON=3, ARROW=4, TYPE=5, BEFORE=6, INSIDE=7, AFTER=8, TERMINAL_OPS=9, 
		NON_TERMINAL=10, TERMINAL=11, NUMBER=12, REGEXP=13, EPS=14, LBRACKET=15, 
		RBRACKET=16, SHARP=17, OTHER=18, ALPHANUM=19, ALL=20, REG_CONTENT=21;
	public static final int
		RULE_prog = 0, RULE_parser_rules = 1, RULE_attributes = 2, RULE_lexer_rules = 3, 
		RULE_right_part_parser = 4, RULE_right_part_lexer = 5, RULE_field_declarations = 6;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "parser_rules", "attributes", "lexer_rules", "right_part_parser", 
			"right_part_lexer", "field_declarations"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "' '", null, "':'", "'->'", null, "'@before'", "'@inside'", "'@after'", 
			null, null, null, null, "'\\\\reg'", "'\\\\eps'", "'{'", "'}'", "'#'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "WS", "ENDL", "COLON", "ARROW", "TYPE", "BEFORE", "INSIDE", "AFTER", 
			"TERMINAL_OPS", "NON_TERMINAL", "TERMINAL", "NUMBER", "REGEXP", "EPS", 
			"LBRACKET", "RBRACKET", "SHARP", "OTHER", "ALPHANUM", "ALL", "REG_CONTENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Grammar.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GrammarParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgContext extends ParserRuleContext {
		public java.util.List<model.ParserRule> parserRules;
		public java.util.List<model.LexerRule> lexerRules;
		public java.util.Map<String, String> fieldDeclarations;
		public java.util.Set<String> inherited;
		public Field_declarationsContext field_declarations;
		public Parser_rulesContext parser_rules;
		public Lexer_rulesContext lexer_rules;
		public Field_declarationsContext field_declarations() {
			return getRuleContext(Field_declarationsContext.class,0);
		}
		public Parser_rulesContext parser_rules() {
			return getRuleContext(Parser_rulesContext.class,0);
		}
		public Lexer_rulesContext lexer_rules() {
			return getRuleContext(Lexer_rulesContext.class,0);
		}
		public List<TerminalNode> ENDL() { return getTokens(GrammarParser.ENDL); }
		public TerminalNode ENDL(int i) {
			return getToken(GrammarParser.ENDL, i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitProg(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);

		        ((ProgContext)_localctx).parserRules =  new java.util.ArrayList<>();
		        ((ProgContext)_localctx).lexerRules =  new java.util.ArrayList<>();
		        ((ProgContext)_localctx).fieldDeclarations =  new java.util.HashMap<>();
		        ((ProgContext)_localctx).inherited =  new java.util.HashSet<>();
		    
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(14);
			((ProgContext)_localctx).field_declarations = field_declarations();

			        ((ProgContext)_localctx).fieldDeclarations =  new java.util.HashMap<>();
			        for (java.util.Map.Entry<String, java.util.Set<String>> entry : ((ProgContext)_localctx).field_declarations.value.entrySet()) {
			            String accum = "";
			            for (String s : entry.getValue()) {
			                accum += s;
			            }
			            _localctx.fieldDeclarations.put(entry.getKey(), accum);
			        }
			        ((ProgContext)_localctx).inherited =  ((ProgContext)_localctx).field_declarations.inherited;
			    
			setState(19);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(16);
					match(ENDL);
					}
					} 
				}
				setState(21);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			setState(22);
			((ProgContext)_localctx).parser_rules = parser_rules(_localctx.inherited);

			        ((ProgContext)_localctx).parserRules =  ((ProgContext)_localctx).parser_rules.rules;
			    
			setState(27);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(24);
					match(ENDL);
					}
					} 
				}
				setState(29);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			setState(30);
			((ProgContext)_localctx).lexer_rules = lexer_rules();

			        ((ProgContext)_localctx).lexerRules =  ((ProgContext)_localctx).lexer_rules.rules;
			    
			setState(35);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==ENDL) {
				{
				{
				setState(32);
				match(ENDL);
				}
				}
				setState(37);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Parser_rulesContext extends ParserRuleContext {
		public java.util.Set<String> inherited;
		public java.util.List<model.ParserRule> rules;
		public String pre;
		public String in;
		public String post;
		public Integer pos;
		public Token NON_TERMINAL;
		public Right_part_parserContext right_part_parser;
		public AttributesContext before;
		public Token NUMBER;
		public AttributesContext inside;
		public AttributesContext after;
		public List<TerminalNode> NON_TERMINAL() { return getTokens(GrammarParser.NON_TERMINAL); }
		public TerminalNode NON_TERMINAL(int i) {
			return getToken(GrammarParser.NON_TERMINAL, i);
		}
		public List<TerminalNode> ARROW() { return getTokens(GrammarParser.ARROW); }
		public TerminalNode ARROW(int i) {
			return getToken(GrammarParser.ARROW, i);
		}
		public List<Right_part_parserContext> right_part_parser() {
			return getRuleContexts(Right_part_parserContext.class);
		}
		public Right_part_parserContext right_part_parser(int i) {
			return getRuleContext(Right_part_parserContext.class,i);
		}
		public List<TerminalNode> WS() { return getTokens(GrammarParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(GrammarParser.WS, i);
		}
		public List<TerminalNode> BEFORE() { return getTokens(GrammarParser.BEFORE); }
		public TerminalNode BEFORE(int i) {
			return getToken(GrammarParser.BEFORE, i);
		}
		public List<TerminalNode> INSIDE() { return getTokens(GrammarParser.INSIDE); }
		public TerminalNode INSIDE(int i) {
			return getToken(GrammarParser.INSIDE, i);
		}
		public List<TerminalNode> NUMBER() { return getTokens(GrammarParser.NUMBER); }
		public TerminalNode NUMBER(int i) {
			return getToken(GrammarParser.NUMBER, i);
		}
		public List<TerminalNode> AFTER() { return getTokens(GrammarParser.AFTER); }
		public TerminalNode AFTER(int i) {
			return getToken(GrammarParser.AFTER, i);
		}
		public List<AttributesContext> attributes() {
			return getRuleContexts(AttributesContext.class);
		}
		public AttributesContext attributes(int i) {
			return getRuleContext(AttributesContext.class,i);
		}
		public Parser_rulesContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public Parser_rulesContext(ParserRuleContext parent, int invokingState, java.util.Set<String> inherited) {
			super(parent, invokingState);
			this.inherited = inherited;
		}
		@Override public int getRuleIndex() { return RULE_parser_rules; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterParser_rules(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitParser_rules(this);
		}
	}

	public final Parser_rulesContext parser_rules(java.util.Set<String> inherited) throws RecognitionException {
		Parser_rulesContext _localctx = new Parser_rulesContext(_ctx, getState(), inherited);
		enterRule(_localctx, 2, RULE_parser_rules);

		        ((Parser_rulesContext)_localctx).rules =  new java.util.ArrayList<>();
		        ((Parser_rulesContext)_localctx).pre =  null;
		        ((Parser_rulesContext)_localctx).in =  null;
		        ((Parser_rulesContext)_localctx).post =  null;
		        ((Parser_rulesContext)_localctx).pos =  -1;
		    
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==NON_TERMINAL) {
				{
				{
				setState(38);
				((Parser_rulesContext)_localctx).NON_TERMINAL = match(NON_TERMINAL);
				setState(40); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(39);
					match(WS);
					}
					}
					setState(42); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==WS );
				setState(44);
				match(ARROW);
				setState(46); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(45);
						match(WS);
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(48); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				setState(50);
				((Parser_rulesContext)_localctx).right_part_parser = right_part_parser(_localctx.inherited);
				setState(54);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(51);
						match(WS);
						}
						} 
					}
					setState(56);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
				}
				{
				setState(61);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==BEFORE) {
					{
					setState(57);
					match(BEFORE);
					setState(58);
					((Parser_rulesContext)_localctx).before = attributes();
					((Parser_rulesContext)_localctx).pre =  ((Parser_rulesContext)_localctx).before.value;
					}
				}

				setState(66);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
				while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
					if ( _alt==1 ) {
						{
						{
						setState(63);
						match(WS);
						}
						} 
					}
					setState(68);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,7,_ctx);
				}
				setState(80);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==INSIDE) {
					{
					setState(69);
					match(INSIDE);
					setState(73);
					_errHandler.sync(this);
					_la = _input.LA(1);
					while (_la==WS) {
						{
						{
						setState(70);
						match(WS);
						}
						}
						setState(75);
						_errHandler.sync(this);
						_la = _input.LA(1);
					}
					setState(76);
					((Parser_rulesContext)_localctx).NUMBER = match(NUMBER);
					setState(77);
					((Parser_rulesContext)_localctx).inside = attributes();

					          ((Parser_rulesContext)_localctx).in =  ((Parser_rulesContext)_localctx).inside.value;
					          ((Parser_rulesContext)_localctx).pos =  Integer.parseInt((((Parser_rulesContext)_localctx).NUMBER!=null?((Parser_rulesContext)_localctx).NUMBER.getText():null));
					      
					}
				}

				setState(85);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==WS) {
					{
					{
					setState(82);
					match(WS);
					}
					}
					setState(87);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(92);
				_errHandler.sync(this);
				_la = _input.LA(1);
				if (_la==AFTER) {
					{
					setState(88);
					match(AFTER);
					setState(89);
					((Parser_rulesContext)_localctx).after = attributes();
					((Parser_rulesContext)_localctx).post =  ((Parser_rulesContext)_localctx).after.value;
					}
				}

				}

				        _localctx.rules.add(new model.ParserRule(new model.NonTerm((((Parser_rulesContext)_localctx).NON_TERMINAL!=null?((Parser_rulesContext)_localctx).NON_TERMINAL.getText():null), _localctx.inherited.contains((((Parser_rulesContext)_localctx).NON_TERMINAL!=null?((Parser_rulesContext)_localctx).NON_TERMINAL.getText():null))), ((Parser_rulesContext)_localctx).right_part_parser.value, _localctx.pre, _localctx.in, _localctx.post, _localctx.pos));
				        ((Parser_rulesContext)_localctx).pre =  null;
				        ((Parser_rulesContext)_localctx).in =  null;
				        ((Parser_rulesContext)_localctx).post =  null;
				        ((Parser_rulesContext)_localctx).pos =  -1;
				    
				}
				}
				setState(100);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AttributesContext extends ParserRuleContext {
		public String value;
		public String accum;
		public Token WS;
		public Token ENDL;
		public Token TERMINAL;
		public Token NON_TERMINAL;
		public Token NUMBER;
		public Token LBRACKET;
		public Token RBRACKET;
		public Token TERMINAL_OPS;
		public Token TYPE;
		public Token OTHER;
		public TerminalNode COLON() { return getToken(GrammarParser.COLON, 0); }
		public TerminalNode SHARP() { return getToken(GrammarParser.SHARP, 0); }
		public List<TerminalNode> WS() { return getTokens(GrammarParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(GrammarParser.WS, i);
		}
		public List<TerminalNode> ENDL() { return getTokens(GrammarParser.ENDL); }
		public TerminalNode ENDL(int i) {
			return getToken(GrammarParser.ENDL, i);
		}
		public List<TerminalNode> TERMINAL() { return getTokens(GrammarParser.TERMINAL); }
		public TerminalNode TERMINAL(int i) {
			return getToken(GrammarParser.TERMINAL, i);
		}
		public List<TerminalNode> NON_TERMINAL() { return getTokens(GrammarParser.NON_TERMINAL); }
		public TerminalNode NON_TERMINAL(int i) {
			return getToken(GrammarParser.NON_TERMINAL, i);
		}
		public List<TerminalNode> NUMBER() { return getTokens(GrammarParser.NUMBER); }
		public TerminalNode NUMBER(int i) {
			return getToken(GrammarParser.NUMBER, i);
		}
		public List<TerminalNode> LBRACKET() { return getTokens(GrammarParser.LBRACKET); }
		public TerminalNode LBRACKET(int i) {
			return getToken(GrammarParser.LBRACKET, i);
		}
		public List<TerminalNode> RBRACKET() { return getTokens(GrammarParser.RBRACKET); }
		public TerminalNode RBRACKET(int i) {
			return getToken(GrammarParser.RBRACKET, i);
		}
		public List<TerminalNode> TERMINAL_OPS() { return getTokens(GrammarParser.TERMINAL_OPS); }
		public TerminalNode TERMINAL_OPS(int i) {
			return getToken(GrammarParser.TERMINAL_OPS, i);
		}
		public List<TerminalNode> TYPE() { return getTokens(GrammarParser.TYPE); }
		public TerminalNode TYPE(int i) {
			return getToken(GrammarParser.TYPE, i);
		}
		public List<TerminalNode> OTHER() { return getTokens(GrammarParser.OTHER); }
		public TerminalNode OTHER(int i) {
			return getToken(GrammarParser.OTHER, i);
		}
		public AttributesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_attributes; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterAttributes(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitAttributes(this);
		}
	}

	public final AttributesContext attributes() throws RecognitionException {
		AttributesContext _localctx = new AttributesContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_attributes);
		((AttributesContext)_localctx).value =  ""; ((AttributesContext)_localctx).accum =  "";
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(104);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==WS) {
				{
				{
				setState(101);
				((AttributesContext)_localctx).WS = match(WS);
				}
				}
				setState(106);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(107);
			match(COLON);
			setState(111);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,14,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(108);
					((AttributesContext)_localctx).ENDL = match(ENDL);
					}
					} 
				}
				setState(113);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,14,_ctx);
			}
			setState(117);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,15,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(114);
					((AttributesContext)_localctx).WS = match(WS);
					}
					} 
				}
				setState(119);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,15,_ctx);
			}
			setState(140); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(140);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case TERMINAL:
					{
					setState(120);
					((AttributesContext)_localctx).TERMINAL = match(TERMINAL);
					_localctx.accum += (((AttributesContext)_localctx).TERMINAL!=null?((AttributesContext)_localctx).TERMINAL.getText():null);
					}
					break;
				case NON_TERMINAL:
					{
					setState(122);
					((AttributesContext)_localctx).NON_TERMINAL = match(NON_TERMINAL);
					_localctx.accum += (((AttributesContext)_localctx).NON_TERMINAL!=null?((AttributesContext)_localctx).NON_TERMINAL.getText():null);
					}
					break;
				case NUMBER:
					{
					setState(124);
					((AttributesContext)_localctx).NUMBER = match(NUMBER);
					_localctx.accum += (((AttributesContext)_localctx).NUMBER!=null?((AttributesContext)_localctx).NUMBER.getText():null);
					}
					break;
				case LBRACKET:
					{
					setState(126);
					((AttributesContext)_localctx).LBRACKET = match(LBRACKET);
					_localctx.accum += (((AttributesContext)_localctx).LBRACKET!=null?((AttributesContext)_localctx).LBRACKET.getText():null);
					}
					break;
				case RBRACKET:
					{
					setState(128);
					((AttributesContext)_localctx).RBRACKET = match(RBRACKET);
					_localctx.accum += (((AttributesContext)_localctx).RBRACKET!=null?((AttributesContext)_localctx).RBRACKET.getText():null);
					}
					break;
				case TERMINAL_OPS:
					{
					setState(130);
					((AttributesContext)_localctx).TERMINAL_OPS = match(TERMINAL_OPS);
					_localctx.accum += (((AttributesContext)_localctx).TERMINAL_OPS!=null?((AttributesContext)_localctx).TERMINAL_OPS.getText():null);
					}
					break;
				case TYPE:
					{
					setState(132);
					((AttributesContext)_localctx).TYPE = match(TYPE);
					_localctx.accum += (((AttributesContext)_localctx).TYPE!=null?((AttributesContext)_localctx).TYPE.getText():null);
					}
					break;
				case OTHER:
					{
					setState(134);
					((AttributesContext)_localctx).OTHER = match(OTHER);
					_localctx.accum += (((AttributesContext)_localctx).OTHER!=null?((AttributesContext)_localctx).OTHER.getText():null);
					}
					break;
				case WS:
					{
					setState(136);
					((AttributesContext)_localctx).WS = match(WS);
					_localctx.accum += (((AttributesContext)_localctx).WS!=null?((AttributesContext)_localctx).WS.getText():null);
					}
					break;
				case ENDL:
					{
					setState(138);
					((AttributesContext)_localctx).ENDL = match(ENDL);
					_localctx.accum += (((AttributesContext)_localctx).ENDL!=null?((AttributesContext)_localctx).ENDL.getText():null);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(142); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << WS) | (1L << ENDL) | (1L << TYPE) | (1L << TERMINAL_OPS) | (1L << NON_TERMINAL) | (1L << TERMINAL) | (1L << NUMBER) | (1L << LBRACKET) | (1L << RBRACKET) | (1L << OTHER))) != 0) );
			setState(144);
			match(SHARP);
			setState(148);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,18,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(145);
					((AttributesContext)_localctx).ENDL = match(ENDL);
					}
					} 
				}
				setState(150);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,18,_ctx);
			}
			setState(154);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,19,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(151);
					((AttributesContext)_localctx).WS = match(WS);
					}
					} 
				}
				setState(156);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,19,_ctx);
			}

			        ((AttributesContext)_localctx).value =  _localctx.accum;
			    
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Lexer_rulesContext extends ParserRuleContext {
		public java.util.List<model.LexerRule> rules;
		public Token TERMINAL;
		public Right_part_lexerContext right_part_lexer;
		public List<TerminalNode> TERMINAL() { return getTokens(GrammarParser.TERMINAL); }
		public TerminalNode TERMINAL(int i) {
			return getToken(GrammarParser.TERMINAL, i);
		}
		public List<TerminalNode> COLON() { return getTokens(GrammarParser.COLON); }
		public TerminalNode COLON(int i) {
			return getToken(GrammarParser.COLON, i);
		}
		public List<Right_part_lexerContext> right_part_lexer() {
			return getRuleContexts(Right_part_lexerContext.class);
		}
		public Right_part_lexerContext right_part_lexer(int i) {
			return getRuleContext(Right_part_lexerContext.class,i);
		}
		public List<TerminalNode> WS() { return getTokens(GrammarParser.WS); }
		public TerminalNode WS(int i) {
			return getToken(GrammarParser.WS, i);
		}
		public Lexer_rulesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lexer_rules; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).enterLexer_rules(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GrammarListener ) ((GrammarListener)listener).exitLexer_rules(this);
		}
	}

	public final Lexer_rulesContext lexer_rules() throws RecognitionException {
		Lexer_rulesContext _localctx = new Lexer_rulesContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_lexer_rules);
		((Lexer_rulesContext)_localctx).rules =  new java.util.ArrayList<>();
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(176);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==TERMINAL) {
				{
				{
				setState(159);
				((Lexer_rulesContext)_localctx).TERMINAL = match(TERMINAL);
				setState(161); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(160);
					match(WS);
					}
					}
					setState(163); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==WS );
				setState(165);
				match(COLON);
				setState(167); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(166);
					match(WS);
					}
					}
					setState(169); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( _la==WS );
				setState(171);
				((Lexer_rulesContext)_localctx).right_part_lexer = right_part_lexer();
